Took out some old code from the ClanLib preprocess CMakeLists.txt.

--- a/depends/ClanLib/CMakeLists.txt
+++ b/depends/ClanLib/CMakeLists.txt
@@ -196,7 +196,6 @@ foreach(input ${totem_src_files_abs_path})
 endforeach(input ${totem_src_files_abs_path})
 #
 #################
-#configure_file(${totem_src_files_abs_path} ${tcp_src_files} COPYONLY)
 message(STATUS " ")
 
 ##################
@@ -204,7 +203,6 @@ message(STATUS " ")
 #
 set(list_count)
 set(list_index 0)
-#list(LENGTH tcp_hdr_files list_count)
 list(LENGTH totem_hdr_files_abs_path list_count)
 foreach(input ${totem_hdr_files_abs_path})
 	set(ignore_index 0)
@@ -242,7 +240,6 @@ foreach(input ${totem_src_addon_files_abs_path})
 endforeach(input ${totem_src_addon_files_abs_path})
 #
 #################
-#configure_file(${totem_src_addon_files_abs_path} ${tcp_src_addon_files} COPYONLY)
 message(STATUS " ")
 
 ##################
@@ -260,7 +257,6 @@ foreach(input ${totem_hdr_addon_files_abs_path})
 endforeach(input ${totem_hdr_addon_files_abs_path})
 #
 #################
-#configure_file(${totem_hdr_addon_files_abs_path} ${tcp_hdr_addon_files} COPYONLY)
 message(STATUS " ")
 
 ##################
@@ -278,76 +274,10 @@ foreach(input ${totem_clanlib_config_hdr_abs_path})
 endforeach(input ${totem_clanlib_config_hdr_abs_path})
 #
 #################
-#configure_file(${totem_src_addon_files_abs_path} ${tcp_src_addon_files} COPYONLY)
 message(STATUS "----------------------------------------------")
 
 set(output_files ${tcp_src_files} ${tcp_hdr_files})
 
-#foreach(output ${output_files})
-#	add_custom_command(	OUTPUT "${output}"
-#						COMMAND ${SED_EXECUTABLE} -i s/T_String/CL_String/g  ${output}
-#						COMMENT "Preprocessing Totem EDK Strings for ClanLib"
-#	)
-#endforeach()
-
-#Define sed find/replace strings
-set(SED_CMD00 s/T_String/CL_String/g)
-set(SED_CMD01 s/D32/double/g)
-set(SED_CMD02 s/F32/float/g)
-set(SED_CMD03 s/S32/int/g)
-set(SED_CMD04 "s/U32/unsigned int/g")
-set(SED_CMD05 "s/T_PropertyTypeId/unsigned int/g")
-set(SED_CMD06 "s/T_EntityId/unsigned long/g")
-set(SED_CMD07 "s/T_Exception/CL_Exception/g")
-set(SED_CMD08 "s/HAS_SIGNALSLOTS_INHERITANCE_TYPE//g")
-set(SED_CMD09 "s/NULL_PTR/nullptr/g")
-set(SED_CMD10 "s/typename T_Signal_v0<>::Type/CL_Signal_v0/g")
-#set(SED_CMD11 "s/typename T_Signal_v\(.*\)::Type/CL_Signal_v\1/g")
-set(SED_CMD12 "s/T_Signal_v\\(.*\\)::Type/CL_Signal_v\\1/g")
-set(SED_CMD13 "s/typename T_SharedPtr\\(.*\\)::Type/CL_SharedPtr\\1/g")
-set(SED_CMD14 "s/T_SharedPtr\\(.*\\)::Type/CL_SharedPtr\\1/g")
-set(SED_CMD15 "s/typename T_Vector\\(.*\\)::Type/std::vector\\1/g")
-set(SED_CMD17 "s/T_Vector\\(.*\\)::Type/std::vector\\1/g")
-set(SED_CMD16 "s/typename T_Map\\(.*\\)::Type/std::unordered_map\\1/g")
-set(SED_CMD17 "s/T_Map\\(.*\\)::Type/std::unordered_map\\1/g")
-set(SED_CMD18 "s/typename T_Pair\\(.*\\)::Type/std::pair\\1/g")
-set(SED_CMD19 "s/T_Pair\\(.*\\)::Type/std::pair\\1/g")
-set(SED_CMD20 "s/.bind(/.set(/g")
-set(SED_CMD21 "s/delegate->delegate(/delegate->delegate.invoke(/g")
-#set(SED_CMD22 "s/#define USE_MINIMAL_DEPENDS_TYPES/#define USE_CLANLIB_TYPES/g")
-#set(SED_CMD23 "")
-
-function(do_sed comment)
-	foreach(output ${output_files})
-		add_custom_command(	OUTPUT "${output}"
-							COMMAND ${SED_EXECUTABLE} -i ${SED_CMD00} ${output}
-							COMMAND ${SED_EXECUTABLE} -i ${SED_CMD01} ${output}
-							COMMAND ${SED_EXECUTABLE} -i ${SED_CMD02} ${output}
-							COMMAND ${SED_EXECUTABLE} -i ${SED_CMD03} ${output}
-							COMMAND ${SED_EXECUTABLE} -i ${SED_CMD04} ${output}
-							COMMAND ${SED_EXECUTABLE} -i ${SED_CMD05} ${output}
-							COMMAND ${SED_EXECUTABLE} -i ${SED_CMD06} ${output}
-							COMMAND ${SED_EXECUTABLE} -i ${SED_CMD07} ${output}
-							COMMAND ${SED_EXECUTABLE} -i ${SED_CMD08} ${output}
-							COMMAND ${SED_EXECUTABLE} -i ${SED_CMD09} ${output}
-							COMMAND ${SED_EXECUTABLE} -i ${SED_CMD10} ${output}
-							#COMMAND ${SED_EXECUTABLE} -i ${SED_CMD11} ${output}
-							COMMAND ${SED_EXECUTABLE} -i ${SED_CMD12} ${output}
-							COMMAND ${SED_EXECUTABLE} -i ${SED_CMD13} ${output}
-							COMMAND ${SED_EXECUTABLE} -i ${SED_CMD14} ${output}
-							COMMAND ${SED_EXECUTABLE} -i ${SED_CMD15} ${output}
-							COMMAND ${SED_EXECUTABLE} -i ${SED_CMD16} ${output}
-							COMMAND ${SED_EXECUTABLE} -i ${SED_CMD17} ${output}
-							COMMAND ${SED_EXECUTABLE} -i ${SED_CMD18} ${output}
-							COMMAND ${SED_EXECUTABLE} -i ${SED_CMD19} ${output}
-							COMMAND ${SED_EXECUTABLE} -i ${SED_CMD20} ${output}
-							COMMAND ${SED_EXECUTABLE} -i ${SED_CMD21} ${output}
-							#COMMAND ${SED_EXECUTABLE} -i ${SED_CMD22} ${output}
-							#COMMAND ${SED_EXECUTABLE} -i ${SED_CMD23} ${output}
-							COMMENT ${comment}
-		)
-	endforeach(output ${output_files})
-endfunction(do_sed)
 function(do_replace comment)
 	foreach(output ${output_files})
 		FILE(READ "${output}" contents)
@@ -381,14 +311,18 @@ function(do_replace comment)
 		STRING(REGEX REPLACE "typename T_Signal_v(.)"		"CL_Signal_v\\1"				contents "${contents}")
 		STRING(REGEX REPLACE "T_Signal_v(.)"				"CL_Signal_v\\1"				contents "${contents}")
 		
-		message(STATUS " ")
-		message(STATUS "Content of ${output}:\n${contents}")
-		message(STATUS " ")
+		#message(STATUS " ")
+		#message(STATUS "Content of ${output}:\n${contents}")
+		#message(STATUS " ")
+		
 		FILE(WRITE ${output} ${contents})
 	endforeach(output ${output_files})
 endfunction(do_replace)
 
 do_replace("Preprocessing Totem EDK for ClanLib")
+
+message(STATUS "Preprocessing Totem EDK for ClanLib is FINISHED!")
+message(STATUS "See editions/clanlib/ for list of all files.")
 
 find_package(ClanLib REQUIRED)
 include_directories(${CL_INCLUDE_PATH})
