Added preprocessor for C++11/Standard + fixed the TOTEM_WITHOUT_PREPROCESSING option to work with the dependencies in the Standard folder (can now erase MinDepends) + it now uses the config.h in the src/ directory. So now we can build src/, who's config.h sets up all typedefs, or we can preprocess using one of the two options (Standard or ClanLib), and work with Totem code that's preprocessed with ClanLib types, or C++11/Standard types.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,3 +103,12 @@ if(PREPROCESS_TOTEM_FOR_CLANLIB)
 	)
 	add_subdirectory(depends/ClanLib)
 endif()
+
+set(PREPROCESS_TOTEM_FOR_STANDARD FALSE CACHE BOOL "TRUE if you want to preprocess Totem EDK's codebase with C++11/Standard bindings, FALSE if not.")
+if(PREPROCESS_TOTEM_FOR_STANDARD)
+	include_directories("${CMAKE_SOURCE_DIR}"
+	  "${CMAKE_SOURCE_DIR}/editions/standard/src"
+	  "${CMAKE_SOURCE_DIR}/editions/standard/include"
+	)
+	add_subdirectory(depends/Standard)
+endif()
