Started working a factory back into the experiment, though right now it only holds a library of component type ids based on component type, which can be used for rtti.

--- a/syntax_experiments/TestNewCpp1/CMakeLists.txt
+++ b/syntax_experiments/TestNewCpp1/CMakeLists.txt
@@ -38,6 +38,7 @@ SOURCE_GROUP("Header Files\\Depends" FILES ${Standard_HDRS})
 set(HDRS
   ./Component.h
   ./ComponentHandler.h
+  ./ComponentFactory.h
   ./TestSystem.h
   ./TestComponent.h
 )
@@ -46,6 +47,7 @@ set(SRCS
   ./main.cpp
   ./Component.cpp
   ./ComponentHandler.cpp
+  ./ComponentFactory.cpp
   ./TestSystem.cpp
   ./TestComponent.cpp
 )
