Got in pooling, but it's not 100% correct yet, since I had to do some hacking in create function to get back a component from pool of given template type ComponentType, the component exist in two different shared_ptr domains at exit, creating a crash!

--- a/syntax_experiments/TestNewCpp1/CMakeLists.txt
+++ b/syntax_experiments/TestNewCpp1/CMakeLists.txt
@@ -39,6 +39,7 @@ set(HDRS
   ./Component.h
   ./ComponentHandler.h
   ./ComponentFactory.h
+  ./PoolComponentFactory.h
   ./TestSystem.h
   ./TestComponent.h
 )
@@ -48,6 +49,7 @@ set(SRCS
   ./Component.cpp
   ./ComponentHandler.cpp
   ./ComponentFactory.cpp
+  ./PoolComponentFactory.cpp
   ./TestSystem.cpp
   ./TestComponent.cpp
 )
