Finished the SharedProperty and Property implementations. There's one thing I don't like in this syntax, and that's how Entity overloading ComponentContainer has no way of inserting itself into the container as a shared pointer.
std::shared_ptr<Entity> entity = std::make_shared<Entity>();
which internally does this:
Entity::Entity()
: ComponentContainer<EntityPtr>(???)
{
}

How do we pass in std::shared_ptr<Entity>(this)? The thing is, we can't... is there another way without adding extra lines to write externally from Entity and/or ComponentContainer?

--- a/syntax_experiments/TestNewCpp1/CMakeLists.txt
+++ b/syntax_experiments/TestNewCpp1/CMakeLists.txt
@@ -45,6 +45,7 @@ set(HDRS
   ./SharedPropertyContainer.h
   ./Property.h
   ./PropertyContainer.h
+  ./Entity.h
   ./TestSystem.h
   ./TestComponent.h
 )
