--- a/trunk/syntax_experiments/TestNewCpp1/CMakeLists.txt
+++ b/trunk/syntax_experiments/TestNewCpp1/CMakeLists.txt
@@ -45,6 +45,7 @@ set(HDRS
   ./SharedPropertyContainer.h
   ./Property.h
   ./PropertyContainer.h
+  ./Entity.h
   ./TestSystem.h
   ./TestComponent.h
 )
