Rewrote the component factories to general Totem factories that handles all instantiation internal to totem.

--- a/syntax_experiments/TestNewCpp1/CMakeLists.txt
+++ b/syntax_experiments/TestNewCpp1/CMakeLists.txt
@@ -38,8 +38,8 @@ SOURCE_GROUP("Header Files\\Depends" FILES ${Standard_HDRS})
 set(HDRS
   ./Component.h
   ./ComponentContainer.h
-  ./ComponentFactory.h
-  ./PoolComponentFactory.h
+  ./TotemFactory.h
+  ./TotemPoolFactory.h
   ./IProperty.h
   ./SharedProperty.h
   ./SharedPropertyContainer.h
@@ -54,8 +54,8 @@ set(SRCS
   ./main.cpp
   ./Component.cpp
   ./ComponentContainer.cpp
-  ./ComponentFactory.cpp
-  ./PoolComponentFactory.cpp
+  ./TotemFactory.cpp
+  ./TotemPoolFactory.cpp
   ./SharedProperty.cpp
   ./SharedPropertyContainer.cpp
   ./Property.cpp
