Added the HashedString class in a separate file this time around.

--- a/syntax_experiments/TestNewCpp1/CMakeLists.txt
+++ b/syntax_experiments/TestNewCpp1/CMakeLists.txt
@@ -36,6 +36,7 @@ set(Standard_HDRS
 SOURCE_GROUP("Header Files\\Depends" FILES ${Standard_HDRS})
 
 set(HDRS
+  ./HashedString.h
   ./Component.h
   ./ComponentContainer.h
   ./IProperty.h
@@ -53,6 +54,7 @@ set(HDRS
 
 set(SRCS
   ./main.cpp
+  ./HashedString.cpp
   ./Component.cpp
   ./ComponentContainer.cpp
   ./Property.cpp
