Started on rewriting the Clanlib preprocessor, but includes will be a problem... perhaps a good solution is to include a config.h which internally adds common includes? This way, all we have to do when preprocessing ClanLib, is to copy in it's config.h...

--- a/depends/ClanLib/CMakeLists.txt
+++ b/depends/ClanLib/CMakeLists.txt
@@ -29,35 +29,17 @@ project(TotemEDK_ClanLib)
 
 empty_preprocess_pair_list()
 
-add_preprocess_pair("T_String" 							"CL_String")
-add_preprocess_pair("D32" 								"double")
-add_preprocess_pair("F32" 								"float")
-add_preprocess_pair("S32" 								"int")
-add_preprocess_pair("U32" 								"unsigned int")
+add_preprocess_pair("std::string" 							"CL_String")
 
-add_preprocess_pair("T_PropertyTypeId" 					"unsigned int")
-add_preprocess_pair("T_EntityId" 						"unsigned long")
-add_preprocess_pair("T_Exception" 						"CL_Exception")
-add_preprocess_pair("HAS_SIGNALSLOTS_INHERITANCE_TYPE" 	" ")
-add_preprocess_pair("NULL_PTR" 							"nullptr")
-add_preprocess_pair("typename T_Signal_v0<>::Type" 		"CL_Signal_v0")
+add_preprocess_pair("std::runtime_error" 						"CL_Exception")
+add_preprocess_pair("public sigslot::has_slots<>" 	" ")
+add_preprocess_pair("sigslot::signal0" 		"CL_Signal_v0")
 add_preprocess_pair(".bind(" 							".set(")
 add_preprocess_pair("delegate->delegate(" 				"delegate->delegate.invoke(")
-add_preprocess_pair("T_Any" 							"cdiggins::any")
-add_preprocess_pair("T_BadAnyCast" 						"cdiggins::anyimpl::bad_any_cast")
 
-add_preprocess_pair("typename T_Map" 					"std::unordered_map")
-add_preprocess_pair("T_Map" 							"std::unordered_map")
-add_preprocess_pair("typename T_SharedPtr" 				"CL_SharedPtr")
-add_preprocess_pair("T_SharedPtr" 						"CL_SharedPtr")
-add_preprocess_pair("typename T_Vector" 				"std::vector")
-add_preprocess_pair("T_Vector" 							"std::vector")
-add_preprocess_pair("typename T_Pair" 					"std::pair")
-add_preprocess_pair("T_Pair" 							"std::pair")
-add_preprocess_pair("::Type" 							" ")
+add_preprocess_pair("std::shared_ptr" 				"CL_SharedPtr")
 
-add_preprocess_pair_regex("typename T_Signal_v(.)"		"CL_Signal_v\\\\1")
-add_preprocess_pair_regex("T_Signal_v(.)"				"CL_Signal_v\\\\1")
+add_preprocess_pair_regex("sigslot::signal(.)"		"CL_Signal_v\\\\1")
 
 set(package_src_files)
 set(package_hdr_files)
